@@ -3,6 +3,7 @@ dietlibc (0.32-5.2exp1) xexperimental; urgency=low
   [ Thorsten Glaser ]
   * Make Héctor Orón the new Maintainer (keeping Gerrit as Uploader)
   * Add myself to Uploaders
+  * d/rules: run tests only if not cross compiling
 
  -- Thorsten Glaser <tg@mirbsd.de>  Tue, 08 Mar 2011 20:11:02 +0000
 
